@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.44-1lsb3.2.i486.rpm 3167531 BLAKE2B 3e5d630389312ac89433fb4b5f38e93691841b92cc9caf8cbee0a350ee709b2e5bafa508bc3d235c693b153474a93b5688c3e907e7f34581830bd46f0bf84bba SHA512 ecdbdf2a5f1a2539802a55c24dfba31bb5d36844a9860c27ab6f67f5c727df4e0f3de6a7649a0971c3cb66ea69b0d5cb9ad24910d1318866d83d1cb8e44832ad
-DIST epson-inkjet-printer-escpr2-1.1.44-1lsb3.2.x86_64.rpm 3166881 BLAKE2B 1c23899bbcfa3d111572351295a15be197ffc13cbee76735aec19dc4e280a0db51595ad94334e08a39de37aa89e1b433d98e119a19e18261f756605749d58dec SHA512 0e132ebff9bef91698d0a185ccd241c4d4117f03d89e1bb4b680575d1bb89d782c719140fa39f6d73316a9c7b6125b1c72d653ddfe71c8153ed58f85a49ec5b5
 DIST epson-inkjet-printer-escpr2-1.1.45-1lsb3.2.i486.rpm 3188341 BLAKE2B 4b74149c06da3c72c799aa5774a004cb7482a869f71a45a023dd9dc7b11eb037c8d57159cd12a119a57fb8788427c8a05b24be662b3be2b7de36a0d9d89a5a12 SHA512 e9197dc14d855150ee6eb29e750b66bf2efe30878d7e1e5e4ba9aac02e095491307fb8dafc161d56e11311f742072d5b7ca5b946ddb43ef5da76dc86920f47d1
 DIST epson-inkjet-printer-escpr2-1.1.45-1lsb3.2.x86_64.rpm 3187642 BLAKE2B 3d738c5d0f022139509f2883d78deb7d939e8cd4cc3168c1e312a58ff3229a7631adac0ea2136412d5a16abd50a7fd4ecff448f979ef56e6c3dc51eb82b99377 SHA512 279abffea921e68c2548ac41bdf578df4f84529c5d3c39ab0d680e2c8b879e89ed73a62ade5d1386dba092edbb83368e7ebdd3ba7beca8b985257497d7bbda35
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.44.ebuild 1670 BLAKE2B bfd10614c8990f315b1c0a2ac1e1ae187141cb944b8387f007bfd7993deea91bd8c5e3753d51b89fd7de193db67c550e6156ec500970c19de7ebd3fb24c8884f SHA512 0c86220735e9c744dcc91125a4c4b256769fd5371e35892d3e66ce7e2f1c2a3370b13ece75150d5ed01fab220f5f01582d471924784396a3c6e7f1bebcf102f6
+DIST epson-inkjet-printer-escpr2-1.1.46-1lsb3.2.i486.rpm 3196998 BLAKE2B de09c0b0bdaf20e7fe5aa203e6993758bacf625a641c9aa815ebd5b71e5b7c62d6a047c6789a11d7598f07f8fa264c6ed685d31a1794a282e8a7e421f564e359 SHA512 2841e72cf49d74b12b2e40828771a1d4ad6b8d074ba3c6d9824d5425b9ec6adcf9caf59cf103c0c9f3def1b0c8902b77b8224b0f354573c004d39a332e7b185d
+DIST epson-inkjet-printer-escpr2-1.1.46-1lsb3.2.x86_64.rpm 3196527 BLAKE2B bb55fd896d99d26e5d85b2ce53d5e3e1bd27bb91942d1b1806b4bd9af8ac73e9cd64ebee0d3b2b4dc5eaae5cdcda0fb648e96650ac1992c0bbe435c057173e3c SHA512 9b9b36924ad7de932155426c55188c4c39d582410249b9eb2fd1e961b0121504900c559592a604dc72e21ab9c91bdc96c088c75cf641778c0c10acd62148d829
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.45.ebuild 1670 BLAKE2B 99d28ed3bd22af74b74e414d6c6775be07233bd8a415c90e883c7115d35278a17066586d84193200e5d6df5f5d3971dbccca5fd4f0a460c0805b7f9c591930d6 SHA512 557ace1c41f23dbafa41aa9744584ea98acece07650b9ff3875e8022f7af130938defa4753433fb7b0c1d413090245d055b2eba7c5467a530cc986fde9892fd0
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.46.ebuild 1670 BLAKE2B 8d7bc30de763febc15ee8eb2d7791733977340eff3b0ecc3f3ee66183cd0dd0de12e45de96a0c369d1b647e0733d04e823d0e1f7494fb11944b38603d90a5252 SHA512 36266ec8ca4985119c20d0f48d0367092b86b3ff73be60f124687ed6f4ddb4f748e9bc93a7cc7907b88ad9d9df97b8d3032af7c4f3e520852b10d851266412c2
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
